--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ALLDevSolutions</title>
+	<title>Sitio web en construcción</title>
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/styles/style-dist.css">
 </head>
 <body>
-    <div class="coverPage">
+<div class="coverPage">
 	<div class="__coverPage-content">
 		<h1>Nombre Apellido</h1>
 		<h2>Escritor</h2>
@@ -21,5 +21,6 @@
 		</div>
 	</div>
 </div>
+	
 </body>
 </html>
